...
        </array>
    </customFonts>
    <scenes>
        <!--Mood Stats-->
        <scene sceneID="s0d-6b-0kx">
            <objects>
                <viewController title="Mood Stats" id="Y6W-OH-hqX" customClass="StatBoardViewController" customModule="NikoNiko" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QdY-TR-Ig6">
                                <rect key="frame" x="0.0" y="470" width="320" height="50"/>
                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
...
                                                <variation key="heightClass=regular-widthClass=regular">
                                                    <fontDescription key="fontDescription" name="Monaco" family="Monaco" pointSize="30"/>
                                                </variation>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="01/11/2021" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="z7d-UD-0Qu">
                                                <rect key="frame" x="120" y="0.0" width="180" height="34.5"/>
                                                <accessibility key="accessibilityConfiguration" identifier="fromDate"/>
                                                <fontDescription key="fontDescription" name="Monaco" family="Monaco" pointSize="20"/>
                                                <textInputTraits key="textInputTraits"/>
                                                <variation key="heightClass=regular-widthClass=regular">
                                                    <fontDescription key="fontDescription" name="Monaco" family="Monaco" pointSize="30"/>
                                                </variation>
                                            </textField>
...
                                                <variation key="heightClass=regular-widthClass=regular">
                                                    <fontDescription key="fontDescription" name="Monaco" family="Monaco" pointSize="30"/>
                                                </variation>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="30/11/2021" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="Dvr-6X-wQG">
                                                <rect key="frame" x="120" y="0.0" width="180" height="34.5"/>
                                                <accessibility key="accessibilityConfiguration" identifier="toDate"/>
                                                <fontDescription key="fontDescription" name="Monaco" family="Monaco" pointSize="20"/>
                                                <textInputTraits key="textInputTraits"/>
                                                <variation key="heightClass=regular-widthClass=regular">
                                                    <fontDescription key="fontDescription" name="Monaco" family="Monaco" pointSize="30"/>
                                                </variation>
                                            </textField>
...
            <point key="canvasLocation" x="1083.75" y="69.718309859154928"/>
        </scene>
        <!--Statistics-->
        <scene sceneID="l1J-Ti-fam">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="lVz-cd-FuB" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Statistics" image="statistics" id="KRD-mv-HLc"/>
                    <toolbarItems/>
                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="pQd-cj-7Xy">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <textAttributes key="titleTextAttributes">
...
