...

enum NameMood: String {
    case happy
    case smiling
    case neutral
    case sad
    case disappointed
    case puzzledColor
}

