...
            <objects>
                <viewController id="Y6W-OH-hqX" customClass="MoodBoardViewController" customModule="NikoNiko" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
...
                                                </constraints>
                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                <state key="normal" title="smiling" image="smiling"/>
                                                <connections>
                                                    <action selector="moodTodayButtonsPressed:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="lOu-cw-USL"/>
...
                                                </constraints>
                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                <state key="normal" title="happy" image="happy"/>
                                                <connections>
                                                    <action selector="moodTodayButtonsPressed:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="z2s-KS-7uH"/>
...
                                                </constraints>
                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                <state key="normal" title="neutral" image="neutral"/>
                                                <connections>
                                                    <action selector="moodTodayButtonsPressed:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="R13-AK-3Le"/>
...
                                                </constraints>
                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                <state key="normal" title="sad" image="sad"/>
                                                <connections>
                                                    <action selector="moodTodayButtonsPressed:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="NNq-kk-qeW"/>
...
                                                </constraints>
                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                <state key="normal" title="disappointed" image="disappointed"/>
                                                <connections>
                                                    <action selector="moodTodayButtonsPressed:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="oZW-nn-xGD"/>
...
                                                        </subviews>
                                                    </stackView>
                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="puzzledColor" translatesAutoresizingMaskIntoConstraints="NO" id="iSn-DO-gJn">
                                                        <rect key="frame" x="0.0" y="40" width="60" height="60"/>
                                                        <constraints>
...
